App-deployment-files/HelloWorld2/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-hw-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-hw-app2
  template:
    metadata:
      labels:
        app: argocd-hw-app2
    spec:
      containers:
      - name: argocd-hw-app2
        image: sujayabu/myhelloworldimage:v1
        ports:
        - containerPort: 5000
