App-deployment-files/HelloWorld2/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-hw-service2
spec:
  selector: 
    app: argocd-hw-app2
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
