App-deployment-files/HelloWorld2/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-hw-ingress2
spec:
  rules:
    - host: argocdhelloworld2.apps.aro-vpaas-dev.euw-hub02.azure.volvo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-hw-service2
                port:
                  number: 5000
  # Uncomment the following section if you have a TLS certificate
  tls:
  - {}
